se agrego el archivo con etqiuetas mas usadas.

--- a/html_semantico.html
+++ b/html_semantico.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div>hola</div>
+    <header>
+
+    </header>
+    <nav>
+        <ul></ul>
+    </nav>
+    <footer></footer>
 </body>
 </html>
